--- a/FPDocs/fp8.html
+++ b/FPDocs/fp8.html
@@ -166,6 +166,10 @@
 						<li>Draw dots in center of towns using centriod function to determine center, and appending circles to the coordinates specified by centroid. </li>
 					</ol>
 				</li>
+				<li>Wrote FP11 first and final draft, editted FP12</li>
+				<li>
+					Merged the two map projects together with Sophie and Tucker.
+				</li>
 			</ul>	
 		</li>	
 	</ul>
