fixed broken link in fp8

--- a/FPDocs/fp8.html
+++ b/FPDocs/fp8.html
@@ -86,7 +86,7 @@
 					</ul>
 				</li>
 				<li>
-					Created layout (<a href="">furbishProject.html</a>) for main page and began merging map with search dialog
+					Created layout (<a href="../furbishProject.html">furbishProject.html</a>) for main page and began merging map with search dialog
 					<ul>
 						<li>
 							Container divs, spaced and sized to fit a typical laptop screen.
