added headers and instructions

--- a/furbishProject.html
+++ b/furbishProject.html
@@ -14,6 +14,21 @@
 <body>
 
 <div id="mainContainer">
+	<div id="headerContainer">
+		<h1>The Furbish Collection: Visualized</h1>
+		<h4>By Sophie Ardell, Marcus Christiansen, and Tucker Gordon</h4>
+		<h4>Bowdoin College</h4>
+		<h4>CSCI 3665</h4>
+	</div>
+	<div id="instructionsContainer">
+		<h4>Instructions:</h4>
+		<ol>
+			<li>Specify a year, or range of years by adjusting the time scale.</li>
+			<li>Use the search bar to find flora by scientific name or common name. To see the towns where Furbish found that flora on the map, click its name in the left pane under the search bar.</li>
+			<li>Click on a town's dot to see all of the selected flora found in that town within the specified time period.</li>
+			<li>Deselect a flora by clicking its name in the right pane under the search bar</li>
+		</ol>
+	</div>
 	<div id="svgContainer">
 		<svg class="map_SVG" width="100%" height="100%"></svg>
 	</div>
