added scale div

--- a/furbishProject.html
+++ b/furbishProject.html
@@ -69,8 +69,12 @@
 		</div>
 	</div>
 
+	<div id="scaleContainer">
+	scale
+	</div>
+
 	<p style="clear: both">
-		For more information on our project, and on Bowdoin's Kate Furbish collection, <a href="./FPDocs/fp11.html">click here</a>.
+		For more information on our project, and on the Kate Furbish collection, <a href="./FPDocs/fp11.html">click here</a>.
 	</p>
 
 	<script type="text/javascript" src="js/searchDialog.js"></script>
