--- a/furbishProject.html
+++ b/furbishProject.html
@@ -60,7 +60,7 @@
 	          <th>Scientific Name</th>
 	          <th>Entry Date</th>
 	          <th>Volume</th>
-	          <th>Page</th>
+	          <th>Page(s)</th>
 	        </tr>
 	      </thead>
 	      <tbody id="floraTableBody">
