--- a/FPDocs/fp9.html
+++ b/FPDocs/fp9.html
@@ -72,6 +72,9 @@
 		<li>
 			Made presentation
 		</li>
+		<li>
+			Figured out how many entries we're missing in our visualization because of places that appear in the dataset, but not in the geoJSON SOPHIE CAN YOU ADD THOSE NUMBERS HERE
+		</li>
 	</ul>
 	<hr/>
 	<h3>New Questions/Issues:</h3>
@@ -112,6 +115,54 @@
 			<th>Sophie</th>
 			<th>Marcus</th>
 			<th>Tucker</th>
+		</tr>
+		<tr>
+			<td>Making dots appear when selecting flora</td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>Making dots increase in size (and scale) for multiple flora entries</td>
+			<td>25%</td>
+			<td>50%</td>
+			<td>25%</td>
+		</tr>
+		<tr>
+			<td>Select all populates map</td>
+			<td>40%</td>
+			<td>20%</td>
+			<td>20%</td>
+		</tr>
+		<tr>
+			<td>Deselecting flora adjusts map</td>
+			<td>40%</td>
+			<td>0%</td>
+			<td>60%</td>
+		</tr>
+		<tr>
+			<td>Deselect all flora</td>
+			<td>0%</td>
+			<td>0%</td>
+			<td>100%</td>
+		</tr>
+		<tr>
+			<td>Populate town inspector when town dot selected</td>
+			<td>10%</td>
+			<td>10%</td>
+			<td>80%</td>
+		</tr>
+		<tr>
+			<td>Deselecting flora updates town inspector</td>
+			<td>0%</td>
+			<td>0%</td>
+			<td>100%</td>
+		</tr>
+		<tr>
+			<td>Determining how many towns we're missing</td>
+			<td>100%</td>
+			<td>0%</td>
+			<td>0%</td>
 		</tr>
 	</table>
 </body>
