Added input from S to FP9

--- a/FPDocs/fp9.html
+++ b/FPDocs/fp9.html
@@ -78,6 +78,9 @@
 				<li>We attempted to reduce this number by parsing out cardinal directions, which led to more bugs, as these are also included in actual town names. We deemed this, at least currently, out of the scope of our project.</li>
 			</ul>
 		</li>
+		<li>
+			Discovered GitHub had overwritten some important code during automatic merges and recovered all of it.
+		</li>
 	</ul>
 	<hr/>
 	<h3>New Questions/Issues:</h3>
@@ -121,9 +124,9 @@
 		</tr>
 		<tr>
 			<td>Making dots appear when selecting flora</td>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td>25%</td>
+			<td>75%</td>
+			<td>0%</td>
 		</tr>
 		<tr>
 			<td>Making dots increase in size (and scale) for multiple flora entries</td>
@@ -162,10 +165,28 @@
 			<td>100%</td>
 		</tr>
 		<tr>
-			<td>Determining how many towns we're missing</td>
+			<td>Determining which and how many towns we're missing</td>
 			<td>100%</td>
 			<td>0%</td>
 			<td>0%</td>
+		</tr>
+		<tr>
+			<td>Unraveling GitHub-based bugs</td>
+			<td>100%</td>
+			<td>0%</td>
+			<td>0%</td>
+		</tr>
+		<tr>
+			<td>Creating slide show</td>
+			<td>45%</td>
+			<td>45%</td>
+			<td>10%</td>
+		</tr>
+		<tr>
+			<td>Writing FP9</td>
+			<td>15%</td>
+			<td>15%</td>
+			<td>70%</td>
 		</tr>
 	</table>
 </body>
