Added slider - not working. Will be looker at other options

--- a/FPDocs/fp9.html
+++ b/FPDocs/fp9.html
@@ -164,6 +164,24 @@
 			<td>0%</td>
 			<td>0%</td>
 		</tr>
+		<tr>
+			<td>Town & Dot Tooltips</td>
+			<td>0%</td>
+			<td>100%</td>
+			<td>0%</td>
+		</tr>
+		<tr>
+			<td>Town & Dot Tooltips</td>
+			<td>0%</td>
+			<td>100%</td>
+			<td>0%</td>
+		</tr>
+		<tr>
+			<td>Seperating map initialization and dot drawing</td>
+			<td>0%</td>
+			<td>100%</td>
+			<td>0%</td>
+		</tr>
 	</table>
 </body>
 </html>
