--- a/furbishProject.html
+++ b/furbishProject.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="d3/topojson.v1.js"></script>
 	<script type="text/javascript" src="d3/d3.queue.js"></script>
 	<script type="text/javascript" src="js/parsedFurbishData.js"></script>
-	<script src="d3.slider.js"></script>
+	<script src="js/d3.slider.js"></script>
 </head>
 <body>
 
