Nearly working town distribution ring graph - currently colors do not work

--- a/furbishProject.html
+++ b/furbishProject.html
@@ -35,6 +35,10 @@
 	      <p><strong> <span id = "townName"></span></strong></p>
 	</div>
 
+	<div id="tootipdont" class="hidden">
+	      <p><strong> <span id = "townName"></span></strong></p>
+	</div>
+
 	<script type="text/javascript" src="js/maine_map.js"></script>
 
 	<div id="searchContainer">
