small changes to descriptions

--- a/furbishProject.html
+++ b/furbishProject.html
@@ -22,7 +22,7 @@
 			<li>Specify a year, or range of years by adjusting the time scale.</li>
 			<li>Use the search bar to find flora by scientific name or common name. To see the towns where Furbish found that flora on the map, click its name in the left pane under the search bar.</li>
 			<li>Click on a town's dot to see all of the selected flora found in that town within the specified time period.</li>
-			<li>Double-click a dot to zoom in, and double-click it again to zoom out</li>
+			<li>Double-click a dot to zoom in and reveal a ring chart of the flora entries there. Double-click the dot again to zoom out</li>
 			<li>Deselect a flora by clicking its name in the right pane under the search bar</li>
 		</ol>
 	</div>
@@ -84,7 +84,7 @@
 	<h2 class="mainHeader">About This Project</h2>
 	<div id="aboutContainer">
 		<p>
-		Our project focuses on the dataset created from Bowdoin's collection of Kate Furbish's botanitcal drawings. Kate Furbish was a botanist from Brunswick, Maine. She lived from 1834 to 1931, where she traveled around Maine collecting samples and cataloging hundreds of the flora in Maine. Her dilligent, prolific cataloging of the flora of Maine while defying gender norms of her time marks Furbish as one of the unsung heros of botany. Her work is now largely curated at Bowdoin College, and can be seen on dipslay in Hawthorne-Longfellow Library. Our project uses a dataset that holds information on each sample in her catalogues, such as:
+		Our project focuses on the dataset created from Bowdoin's collection of Kate Furbish's botanitcal drawings. Kate Furbish was a botanist from Brunswick, Maine. She lived from 1834 to 1931, where she traveled around Maine collecting samples and cataloging hundreds of the flora in Maine. Her dilligent, prolific cataloging of the flora of Maine while defying gender norms of her time marks Furbish as one of the unsung heros of botany. Her work is now largely curated at Bowdoin College, and can be seen on dipslay in Hawthorne-Longfellow Library. Our project uses a dataset of over 1,300 entries that holds information on each sample in her catalogues, such as:
 		<ul>
 			<li>Location of where the sample was found</li>
 			<li>Year that the sample was found</li>
