added more docs to menu

--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,21 @@
 	<title>Menu</title>
 </head>
 <body>
+	<h1>Bowdoin's Kate Furbish Collection: Visualized</h1>
+	<p>Sophie Ardell, Marcus Christiansen, and Tucker Gordon</p>
+	<h3>Main Project Documents:</h3>
+	<b> <a href="./furbishProject.html">Visualization Page</a></b>
+	<br>
+	<b> <a href="./js/maine_map.js">Map visualization JS</a></b>
+	<br>
+	<b> <a href="./js/parse.js">Parsing JS</a></b>
+	<br>
+	<b> <a href="./js/searchDialog.js">Search dialog JS</a></b>
+	<br>
+	<b> <a href="./js/townInspector.js">Town inspector JS</a></b>
+	<br>
+
+	<h3>Supplemental assignment documents:</h3>
 	<b> <a href="./FPDocs/fp1.html">Project Description</a></b>
 	<br>
 	<b> <a href="./FPDocs/fp2.html">Dataset Description</a></b>
@@ -19,8 +34,14 @@
 	<br>
 	<b> <a href="./FPDocs/fp8.html">Week 3 Progress Report</a></b>
 	<br>
+	<b> <a href="./FPDocs/fp9.html">Week 4 Progress Report</a></b>
+	<br>
+	<b> <a href="./FPDocs/fp10.html">Week 5 Progress Report</a></b>
+	<br>
 	<b> <a href="./FPDocs/fp11.html">Project Description, take 2</a></b>
 	<br>
 	<b> <a href="./FPDocs/fp12.html">Goals, take 2</a></b>
+	<br>
+	<b> <a href="./Presentation/FinalProjectPresentation.pptx">Powerpoint presentation</a></b>
 </body>
 </html>
