final deliverable navigation setup

--- a/InternalEntryPage.html
+++ b/InternalEntryPage.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-	<title>Menu</title>
+	<title>Entry page</title>
 </head>
 <body>
-	<h1>Furbish Project Entry Page</h1>
+	<h1>Furbish Project: Entry Page</h1>
 	<p>Sophie Ardell, Marcus Christiansen, and Tucker Gordon</p>
 	<h3>Main Project Documents:</h3>
 	<b> <a href="./furbishProject.html">Visualization Page</a></b>
