made a functional slider with brush functions, would be ready to be integrated except for scaling issue. Will look at more later today.

--- a/furbishProject.html
+++ b/furbishProject.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Kate Furbish Project</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<!-- <link rel="stylesheet" type="text/css" href="sliderStyle.css"> -->
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/list.min.js"></script>
 	<script type="text/javascript" src="d3/d3.v3.js"></script>
@@ -77,6 +78,13 @@
 
 	<div id="scaleContainer">
 	</div>
+	<!-- <div id="svgContainer">
+	  <svg class="slider_SVG" width="50%" height="50%"></svg>
+	</div> -->
+
+	
+	<script type="text/javascript" src="sophie_slider2.js"></script>
+
 
 	<script type="text/javascript" src="js/searchDialog.js"></script>
 	<script type="text/javascript" src="js/townInspector.js"></script>
