--- a/FPDocs/fp10.html
+++ b/FPDocs/fp10.html
@@ -136,6 +136,12 @@
 			<td>100%</td>
 			<td>0%</td>
 		</tr>
+		<tr>
+			<td>Added entry page</td>
+			<td>50%</td>
+			<td>0%</td>
+			<td>50%</td>
+		</tr>
 	</table>
 </body>
 </html>
