--- a/furbishProject.html
+++ b/furbishProject.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<title>Kate Furbish Project</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<!-- <link rel="stylesheet" type="text/css" href="sliderStyle.css"> -->
 	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/list.min.js"></script>
 	<script type="text/javascript" src="d3/d3.v3.js"></script>
@@ -76,14 +75,19 @@
 		</div>
 	</div>
 
-	<div id="scaleContainer">
-	</div>
+<!-- 	<div id="scaleContainer">
+	</div> -->
 	<!-- <div id="svgContainer">
 	  <svg class="slider_SVG" width="50%" height="50%"></svg>
 	</div> -->
 
+	<div id="scaleContainer">
+	  <svg class="slider_SVG" width="100%" height="100%"></svg>
+	</div>
+
 	
-	<script type="text/javascript" src="sophie_slider2.js"></script>
+	<script type="text/javascript" src="js/brushSlider.js"></script>
+	
 
 
 	<script type="text/javascript" src="js/searchDialog.js"></script>
