--- a/FPDocs/fp10.html
+++ b/FPDocs/fp10.html
@@ -15,10 +15,13 @@
 	<h3>Progress on Goals:</h3>
 	<ul>
 		<li>
-			Implemented time slider
+			Implemented more interactive time slider. Was not able to fully integrate with the town inspector.
 		</li>
 		<li>
-			Added donut charts for zoom-in
+			Created ring graph when zoomed in on a particular town. This ring graph represents the town’s flora distribution sample. This ring graph will only plot the flora samples that the user themselves have specified.
+		</li>
+		<li>
+			Introduced the ability to zoom in and out on a particular town (using d3 projections) when double clicking on the respective town dot.
 		</li>
 		<li>
 			Minor stylistic adjustments
@@ -113,19 +116,25 @@
 			<td>10%</td>
 		</tr>
 		<tr>
-			<td>Writing FP9</td>
+			<td>Writing FP10</td>
 			<td>15%</td>
 			<td>15%</td>
 			<td>70%</td>
 		</tr>
 		<tr>
-			<td>Time Slider implementation</td>
+			<td>Time Slider Implementation</td>
 			<td>90%</td>
 			<td>10%</td>
 			<td>0%</td>
 		</tr>
 		<tr>
-			<td>Donut Chart implementation</td>
+			<td>Time Slider Integration</td>
+			<td>100%</td>
+			<td>0%</td>
+			<td>0%</td>
+		</tr>
+		<tr>
+			<td>Town Flora Sample Distribution Ring Graph</td>
 			<td>0%</td>
 			<td>100%</td>
 			<td>0%</td>
@@ -135,6 +144,18 @@
 			<td>50%</td>
 			<td>0%</td>
 			<td>50%</td>
+		</tr>
+		<tr>
+			<td>Zoom in/out when double clicking dot</td>
+			<td>0%</td>
+			<td>100%</td>
+			<td>0%</td>
+		</tr>
+		<tr>
+			<td>Submitting project 25 minutes late</td>
+			<td>100%</td>
+			<td>0%</td>
+			<td>0%</td>
 		</tr>
 	</table>
 </body>
